springlify-commander final version